# ext-kafka

./: .dockerignore  .gitignore  README.md
ext/: Cargo.toml  build.rs
ext/src/: client.rs  client_interface.rs  ini_config.rs  ipc.rs  lib.rs  pool.rs  protocol.rs  spawn.rs  subscription.rs  worker_entry.rs  worker_health.rs
php-driver/: .gitignore  composer.json
proto/src/: error.rs  lib.rs
stubs/: README.md  composer.json  hi_kafka.php
tests/php/: control-recovery.php  partition-timestamp.php  rebalance.php  replay-recovery.php  swoole-phase3.php
